# publicsuffix

./: .travis.yml  Cargo.toml  README.md  default.nix
.github/workflows/: ci.yml
benches/: benches.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: anycase.rs  error.rs  errors.rs  fxhash.rs  lib.rs  matcher.rs  tests.rs
tests/: list.rs
