[package]
name = "publicsuffix"
description = "A native library for Mozilla's Public Suffix List"
version = "2.0.1-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rushmorem/publicsuffix"
documentation = "https://docs.rs/publicsuffix"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "psl", "no_std"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[features]
default = ["punycode"]
punycode = ["idna"]
std = []

[dependencies]
indexmap = "1.6.2"
psl-types = "2.0.0"
idna = { version = "0.2.2", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
psl-lexer = "0.3.1"
rspec = "1.0.0"
