[package]
name = "publicsuffix"
description = "A native library for Mozilla's Public Suffix List"
version = "2.0.14-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rushmorem/publicsuffix"
documentation = "https://docs.rs/publicsuffix"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "psl", "no_std"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[features]
# Punycode is enabled by default to be feature parity with the `psl` crate
# by default, making switching between the 2 work seemlessly out of the box
default = ["punycode"]

# Adds support for looking up domain names in any case
anycase = ["unicase"]

# Adds support for looking up domain names in ascii format (normalised punycode)
# see `idna::domain_to_ascii`. Since `idna` doesn't support `no_std` environments
# this feature disables `no_std`
punycode = ["idna"]

# Adds support for `std::error::Error`
std = []

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
hashbrown = { version = "0.11.1", default-features = false, features = ["inline-more"] }
psl-types = "2.0.6"

# Optional dependencies
idna = { version = "0.2.2", optional = true }
unicase = { version = "2.6.0", default-features = false, optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
rspec = "1.0.0"

[package.metadata.docs.rs]
all-features = true
